--- a/SP_Examples/wwwroot/index.html
+++ b/SP_Examples/wwwroot/index.html
@@ -1,1 +1,11 @@
-<p>here we are</p>
+﻿<html>
+<head>
+<title>
+A Simple HTML Document
+</title>
+</head>
+<body>
+<p>This is a very simple HTML document</p>
+<p>It only has two paragraphs</p>
+</body>
+</html>
