--- a/SP_Examples/wwwroot/index.html
+++ b/SP_Examples/wwwroot/index.html
@@ -10,6 +10,29 @@
 <body>
     <p>This is a very simple HTML document</p>
     <p>It only has two paragraphs</p>
+
+    <!-- Ref: https://codepen.io/michellebarker/pen/zWEKQE -->
+    <div class="wrapper">
+        <div class="grid">
+            <div class="grid__item grid__item--heading">
+                <h1>Hello. And welcome.</h1>
+            </div>
+            <div class="grid__item grid__item--lg">
+                <img src="https://images.unsplash.com/photo-1506328962840-ff6790651285?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=0216f5c81ee7481941d551b4113b1ca7&auto=format&fit=crop&w=1950&q=80"
+                    alt="A kingfisher close up">
+            </div>
+            <div class="grid__item grid__item--md">
+                <img src="https://images.unsplash.com/photo-1505051508008-923feaf90180?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=fda1d3045d1ff97ef564d4fc3ae14fe4&auto=format&fit=crop&w=1950&q=80"
+                    alt="Beautiful sunset">
+            </div>
+            <div class="grid__item grid__item--sm">
+                <img src="https://images.unsplash.com/photo-1506604900144-7360175909e2?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=d437158dff03180ed32cc39401b3a894&auto=format&fit=crop&w=1955&q=80"
+                    alt="Pine needles on a tree">
+            </div>
+        </div>
+        <button class="btn">Click to change placement</button>
+    </div>
+
 </body>
 
 </html>
