--- a/SP_Examples/wwwroot/index.html
+++ b/SP_Examples/wwwroot/index.html
@@ -1,6 +1,8 @@
 ﻿<html>
   <head>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css" href="index.css" />
+    <script defer src="index.js"></script>
     <title>
       A Simple HTML Document
     </title>
