--- a/SP_Examples/wwwroot/index.html
+++ b/SP_Examples/wwwroot/index.html
@@ -2,6 +2,7 @@
   <head>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="index.css" />
+    <!-- Ref: https://flaviocopes.com/javascript-async-defer/ -->
     <script defer src="index.js"></script>
     <title>
       A Simple HTML Document
