feat (menu) add icons

--- a/SP_Examples/wwwroot/index.html
+++ b/SP_Examples/wwwroot/index.html
@@ -18,11 +18,13 @@
 
   <body>
     <!-- Ref: https://www.w3schools.com/howto/howto_js_topnav_responsive.asp -->
+    <!-- Ref: https://www.w3schools.com/howto/howto_css_navbar_icon.asp -->
     <div class="topnav" id="myTopnav">
-      <a href="#home" class="active">Home</a>
-      <a href="#news">News</a>
-      <a href="#contact">Contact</a>
-      <a href="#about">About</a>
+      <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
+      <a href="#"><i class="fa fa-fw fa-search"></i> Search</a>
+      <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
+      <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
+      <a href="#"><i class="fa fa-info-circle"></i> About</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
