feat (fa) update to fontawesome 5.8.1

--- a/SP_Examples/wwwroot/index.html
+++ b/SP_Examples/wwwroot/index.html
@@ -8,17 +8,18 @@
     <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
     />
 
-    <title>
-      A Simple HTML Top Navigation Menu
-    </title>
+    <title>A Simple HTML Top Navigation Menu</title>
   </head>
 
   <body>
     <!-- Ref: https://www.w3schools.com/howto/howto_js_topnav_responsive.asp -->
     <!-- Ref: https://www.w3schools.com/howto/howto_css_navbar_icon.asp -->
+    <!-- Ref: https://fontawesome.com/start -->
     <div class="topnav" id="myTopnav">
       <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
       <a href="#"><i class="fa fa-fw fa-search"></i> Search</a>
