fix (fa) use fas for fontawesome solid

--- a/SP_Examples/wwwroot/index.html
+++ b/SP_Examples/wwwroot/index.html
@@ -22,10 +22,10 @@
     <!-- Ref: https://fontawesome.com/start -->
     <div class="topnav" id="myTopnav">
       <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
-      <a href="#"><i class="fa fa-fw fa-search"></i> Search</a>
-      <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a>
-      <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
-      <a href="#"><i class="fa fa-info-circle"></i> About</a>
+      <a href="#"><i class="fas fa-fw fa-search"></i> Search</a>
+      <a href="#"><i class="fas fa-fw fa-envelope"></i> Contact</a>
+      <a href="#"><i class="fas fa-fw fa-user"></i> Login</a>
+      <a href="#"><i class="fas fa-info-circle"></i> About</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
