--- a/SP_Examples/wwwroot/Demo_000/index.html
+++ b/SP_Examples/wwwroot/Demo_000/index.html
@@ -1,6 +1,6 @@
 ﻿<html>
   <head>
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon.ico?v=2" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="index.css" />
     <!-- Ref: https://flaviocopes.com/javascript-async-defer/ -->
     <script defer src="index.js"></script>
