--- a/SP_Examples/wwwroot/Demo_001/index.html
+++ b/SP_Examples/wwwroot/Demo_001/index.html
@@ -8,9 +8,7 @@
     <title>Random Flower Generator</title>
   </head>
 
-  <script>
-    https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.0.3/chroma.min.js
-  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.0.3/chroma.min.js"></script>
 
   <body>
     <svg id="svg"></svg>
